# vugra

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  go.mod  go.sum
.codex/skills/vuego-project/: SKILL.md
cmd/vugra/: component_import_example_test.go  demo_state.go  demo_state_native.go  demo_state_wasm.go  finder_example_test.go  finder_parity.go  go_finder.go  main.go  main_test.go  native_app_darwin.go  native_app_other.go  native_relaunch.go  native_window_disabled.go  native_window_enabled.go  native_window_enabled_test.go  rust_finder.go  rust_finder_test.go  rust_sfc.go  system_example_test.go  wasm_demo_state.go
crates/vugra-abi/: Cargo.toml
crates/vugra-abi/src/: lib.rs
crates/vugra-core/: Cargo.toml
crates/vugra-core/src/: lib.rs
crates/vugra-go/: Cargo.toml
crates/vugra-go/src/: lib.rs
crates/vugra-host-native/: Cargo.toml
crates/vugra-host-native/src/: lib.rs
crates/vugra-host-wasm/: Cargo.toml
crates/vugra-host-wasm/src/: lib.rs
crates/vugra-ir/: Cargo.toml
crates/vugra-ir/src/: lib.rs
crates/vugra-layout/: Cargo.toml
crates/vugra-layout/src/: lib.rs
crates/vugra-render/: Cargo.toml
crates/vugra-render-vello/: Cargo.toml
crates/vugra-render-vello/src/: lib.rs
crates/vugra-render-wgpu/: Cargo.toml
crates/vugra-render-wgpu/src/: lib.rs
crates/vugra-render/src/: lib.rs
crates/vugra-rs/: Cargo.toml
crates/vugra-rs-codegen/: Cargo.toml
crates/vugra-rs-codegen/src/: lib.rs
crates/vugra-rs-codegen/tests/: generated_contract.rs  (+2 more)
crates/vugra-rs/src/: lib.rs
crates/vugra-scene/: Cargo.toml
crates/vugra-system/: Cargo.toml
crates/vugra-text/: Cargo.toml
docs/: css-profile-v1.md  project-config.md  rust-kernel-architecture.md  vugra.config.schema.json
docs/site/: App.vue  api.html  index.html  manual.html  verify_docs_site.sh  vugra.config.json  wasm.html
examples/background/: BackgroundBox.vue
examples/checkbox/: CheckboxBox.vue
examples/components/: Badge.vue  Parent.vue  README.md
examples/counter/: Counter.vue
examples/disabled/: DisabledButton.vue
examples/finder/: FinderFilePane.vue  FinderIconBack.vue  FinderIconChevronDown.vue  FinderIconChevronRight.vue  FinderIconDownload.vue  FinderIconFile.vue  FinderIconFolder.vue  FinderIconForward.vue  FinderIconPicture.vue  FinderIconProject.vue  FinderLite.vue  FinderOverlays.vue  FinderSidebar.vue  FinderStatusBar.vue  FinderToolbar.vue  vugra.config.json
examples/finder-rust/: Cargo.toml
examples/finder-rust-sfc/: FinderLite.vue
examples/finder-rust/src/: main.rs
examples/focus/: FocusCycle.vue
examples/opacity/: OpacityBox.vue
examples/pointer/: PointerBox.vue
examples/rust-counter/: Counter.vue
examples/scroll/: ScrollBox.vue
examples/styled/: StyledBox.vue
examples/svg/: SVGDemo.vue
examples/system/: SystemFiles.vue
examples/textinput/: TextInput.vue
internal/accessibility/: tree.go  tree_test.go
internal/app/: app.go  app_test.go
internal/codegen/: runtime_state.go  runtime_state_test.go
internal/compiler/: compiler.go  compiler_test.go  component_import_test.go
internal/componentfile/: componentfile.go
internal/csslayout/: csslayout.go  csslayout_test.go  ffi_darwin.go  ffi_stub.go
internal/goanalysis/: analyzer.go  analyzer_test.go  doc.go  types.go
internal/goldentest/: golden.go
internal/host/: host.go  host_test.go
internal/ir/: builder.go  builder_test.go  types.go
internal/layout/: cssengine.go  layout.go  layout_test.go
internal/lsp/: doc.go  virtual.go  virtual_test.go
internal/nativehost/: native.go  native_test.go
internal/nativewindow/: callbacks_darwin.go  doc.go  mainthread_darwin.go  window_darwin.go  window_enabled_test.go  window_stub.go  window_test.go
internal/project/: config.go  config_test.go  system.go
internal/reactivity/: effect.go  scheduler.go  signal.go  signal_test.go
internal/renderer/: renderer.go  software.go  software_test.go
internal/runtime/: css_layout_test.go  runtime.go  runtime_test.go
internal/rustanalysis/: analyzer.go  analyzer_test.go  sourcemap.go  types.go
internal/rustcodegen/: adapter.go  adapter_test.go
internal/scene/: scene.go  scene_test.go
internal/sfc/: parser.go  parser_test.go  types.go
internal/style/: parser.go  parser_test.go  types.go
internal/template/: doc.go  parser.go  parser_test.go  types.go
internal/vello/: adapter.go  adapter_test.go
internal/vellonative/: renderer_darwin.go  renderer_darwin_test.go  renderer_stub.go
internal/wasmhost/: a11y_js.go  canvas_js.go  doc.go  page.go  page_test.go  svg.go  svg_test.go
pkg/signal/: signal.go  signal_test.go
pkg/system/: fs.go  fs_browser_default.go  fs_default.go  fs_test.go  fs_web_wasm.go  fs_web_wasm_test.go  gui.go
pkg/vugra/: vugra.go  vugra_test.go  wasm.go
tools/css-layout/: Cargo.toml
tools/css-layout/src/: engine.rs  lib.rs  main.rs
tools/vello-native/: Cargo.toml
tools/vello-native/src/: lib.rs
tools/vello-sidecar/: Cargo.toml
tools/wasm-browser-check/: run.mjs
tools/wasm-smoke/: run.mjs
(+16 files in other folders)
