[package]
name = "vugra-render-vello"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", optional = true }
futures-intrusive = { version = "0.5", optional = true }
pollster = { version = "0.4", optional = true }
vello = { version = "0.9", optional = true }
vugra-ir = { path = "../vugra-ir" }
vugra-layout = { path = "../vugra-layout" }
vugra-render = { path = "../vugra-render" }
vugra-scene = { path = "../vugra-scene" }
vugra-text = { path = "../vugra-text" }

[features]
default = []
vello-device = ["anyhow", "futures-intrusive", "pollster", "vello"]
