[package]
name = "vugra-render-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
futures-intrusive = { version = "0.5", optional = true }
pollster = { version = "0.4", optional = true }
vugra-ir = { path = "../vugra-ir" }
vugra-layout = { path = "../vugra-layout" }
vugra-render = { path = "../vugra-render" }
vugra-scene = { path = "../vugra-scene" }
vugra-text = { path = "../vugra-text" }
wgpu = { version = "22.1.0", optional = true }

[features]
default = []
wgpu-device = ["anyhow", "bytemuck", "futures-intrusive", "pollster", "wgpu"]
