[package]
name = "vugra-css-layout"
version = "0.1.0"
edition = "2021"

[lib]
name = "vuego_css_layout"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
lightningcss = { version = "1.0.0-alpha.71", default-features = false }
parley = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
taffy = "0.11.0-experimental-cache-fix.3"
