[package]
name = "vugra-css-layout"
version = "0.1.0"
edition = "2021"

[lib]
name = "vuego_css_layout"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
lightningcss = { version = "1.0.0-alpha.71", default-features = false }
hashbrown = "=0.16.1"
font-types = "=0.10.1"
icu_locale_core = "=2.1.1"
indexmap = "=2.11.4"
parley = { version = "0.7", default-features = false, features = ["std"] }
read-fonts = "=0.35.0"
skrifa = "=0.37.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
taffy = "0.11.0-experimental-cache-fix.3"
unicode-segmentation = "=1.12.0"
