[package]
name = "vello-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
cosmic-text = "0.19.0"
futures-intrusive = "0.5"
pollster = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
roxmltree = "0.21.1"
svgtypes = "0.16.1"
vello = "0.9.0"
